--- a/index.html
+++ b/index.html
@@ -1,14 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Jacob Nguyen Personal Portfolio</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    
-</head>
-<body>
-    
-</body>
+    <head>
+        <title>Jacob Nguyen Personal Portfolio</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/52406ad708.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <div id="header">
+            <div class="container">
+                <nav>
+                    <img src="imgs/logo.png" alt="logo" class="logo">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="header-text">
+                    <p>
+                        Software Engineer
+                    </p>
+                    <h1>
+                        Hi, I'm <span>Jacob</span><br>Nguyen From Canada
+                    </h1>
+                </div>
+            </div>
+        </div>
+
+        <!--About-->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="about-col-1">
+                        <img src="imgs/user.png" alt="user">
+                    </div>
+                    <div class="about-col-2">
+                        <h1 class="sub-title">About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit modi laboriosam maxime qui facilis ab esse accusantium, neque alias. Deserunt unde voluptas, quaerat et voluptatum cumque deleniti sunt exercitationem adipisci.</p>
+                        <div class="tab-titles">
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
+                        </div>
+                        <div class="tab-contents active-tab" id="skills">
+                            <ul>
+                                <li>
+                                    <span>UI/UX</span><br>Design Web/App Interfaces
+                                </li>
+                                <li>
+                                    <span>Web Deveoplment</span><br>Web App Development
+                                </li>
+                                <li>
+                                    <span>App Development</span><br>Building Android/ios apps
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="experience">
+                            <ul>
+                                <li>
+                                    <span>May 2022 - Present</span><br>Computer Numerical Control Machinist
+                                </li>
+                                <li>
+                                    <span>Sept. 2018 - June 2019</span><br>Event Planner
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="education">
+                            <ul>
+                                <li>
+                                    <span>Sept. 2019 - May 2023</span><br>Bachlor of Science, Computer Science. University of Alberta
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Services-->
+        <section id="services">
+            <div class="container">
+                <h1 class="sub-title">My Services</h1>
+                <div class="services-list">
+                    <div>
+                        <i class="fa-solid fa-code"></i>
+                        <h2>Web Design</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a fuga nesciunt, aspernatur unde blanditiis ullam adipisci aperiam quod labore ipsa libero architecto atque quibusdam quaerat tempora voluptatum omnis ipsum.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-crop"></i>
+                        <h2>UI/UX Design</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a fuga nesciunt, aspernatur unde blanditiis ullam adipisci aperiam quod labore ipsa libero architecto atque quibusdam quaerat tempora voluptatum omnis ipsum.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-app-store"></i>
+                        <h2>App Design</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi a fuga nesciunt, aspernatur unde blanditiis ullam adipisci aperiam quod labore ipsa libero architecto atque quibusdam quaerat tempora voluptatum omnis ipsum.
+                        </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- portfolio -->
+        <section id="portfolio">
+            <div class="container">
+                <h1 class="sub-title">My Work</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="imgs/work1.jpg">
+                        <div class="layer">
+                            <h3>
+                                Social Media App
+                            </h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima doloribus, id dolores maxime fuga quaerat voluptatem tempora. Eos, quas nobis voluptate non enim nulla dolorem eaque modi nemo! Dicta, sed?</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="imgs/work2.jpg">
+                        <div class="layer">
+                            <h3>
+                                Music
+                            </h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima doloribus, id dolores maxime fuga quaerat voluptatem tempora. Eos, quas nobis voluptate non enim nulla dolorem eaque modi nemo! Dicta, sed?</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="imgs/work3.jpg">
+                        <div class="layer">
+                            <h3>
+                                Online Shopping App
+                            </h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima doloribus, id dolores maxime fuga quaerat voluptatem tempora. Eos, quas nobis voluptate non enim nulla dolorem eaque modi nemo! Dicta, sed?</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></i></a>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </section>
+
+        <!--Contact-->
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">
+                            Contact Me
+                        </h1>
+                        <p>
+                            <i class="fa-solid fa-envelope"></i>
+                            example@gmail.com
+                        </p>
+                        <p>
+                            <i class="fa-solid fa-phone"></i>
+                            (123)-456-7890
+                        </p>
+                    </div>
+                    <div class="contact-right">
+                        <form>
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                            <textarea name="message" rows="10" placeholder="Your Message"></textarea>
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <script>
+            var tablinks = document.getElementsByClassName("tab-links");
+            var tabcontents = document.getElementsByClassName("tab-contents");
+
+            function opentab(tabname){
+                for(tablink of tablinks){
+                    tablink.classList.remove("active-link");
+                }
+                for(tabcontent of tabcontents){
+                    tabcontent.classList.remove("active-tab");
+                }
+                event.currentTarget.classList.add("active-link")
+                document.getElementById(tabname).classList.add("active-tab")
+            }
+        </script>
+    </body>
 </html>
